fit:修改前端的功能
